--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,12 @@
 events {
-    worker_connections 1024; # You can adjust this number based on your requirements
+    worker_connections 1024
 }
 
 http {
     server {
         listen 80;
-        server_name example.com;
 
-        root /path/to/your/laravel/public/directory;
+        root /var/www/html/public;
 
         index index.php index.html;
 
@@ -17,7 +16,7 @@ http {
 
         location ~ \.php$ {
             include fastcgi_params;
-            fastcgi_pass laravel-app:9000; # Correct service name from Docker Compose configuration
+            fastcgi_pass laravel-app:9000;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
         }
