--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,6 @@ services:
         build:
             context: .
             dockerfile: Dockerfile
-        ports:
-            - "9000:9000"
         environment:
             DB_CONNECTION: mysql
             DB_HOST: mysql
@@ -30,8 +28,7 @@ services:
             DB_DATABASE: snappfood
             DB_USERNAME: root
             DB_PASSWORD: your_password
-        command: >
-            bash -c "php artisan test && php artisan install-command"
+        command: bash -c "php artisan test && php artisan install-command && php-fpm"
         depends_on:
             - mysql
         networks:
@@ -40,7 +37,7 @@ services:
     nginx:
         image: nginx:latest
         ports:
-            - "80:80"
+            - "9000:80"
         volumes:
             - ./nginx.conf:/etc/nginx/nginx.conf
         depends_on:
