--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
         ports:
             - "3306:3306"
         environment:
-            MYSQL_ROOT_PASSWORD: yuor_password
+            MYSQL_ROOT_PASSWORD: 123456789
             MYSQL_DATABASE: snappfood
         volumes:
             - mysql_data:/var/lib/mysql
@@ -27,8 +27,8 @@ services:
             DB_PORT: 3306
             DB_DATABASE: snappfood
             DB_USERNAME: root
-            DB_PASSWORD: your_password
-        command: bash -c "php artisan test && php artisan install-command && php-fpm"
+            DB_PASSWORD: 123456789
+#        command: bash -c "php artisan test && php artisan refresh-db-command && php-fpm"
         depends_on:
             - mysql
         networks:
